Created card for moderator publishing details (preview)

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -149,3 +149,11 @@
   font-size: 0.9em;
   height: 4em
 }
+
+.publishCardDetailsBottom {
+  background-color: #F6FAFF;
+  border: 0.1em solid #A3CAF6;
+  height: 5em;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
+}
