--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -150,6 +150,13 @@
   height: 4em
 }
 
+.chooseModerateButton {
+  width: 90vw;
+  height: 5em;
+  font-size: 0.9em;
+  border-radius: 0.5em;
+}
+
 .publishCardDetailsBottom {
   background-color: #F6FAFF;
   border: 0.1em solid #A3CAF6;
