Finished delete moderator publishing

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -157,6 +157,14 @@
   border-radius: 0.5em;
 }
 
+.acceptModerateButton {
+  width: 30vw;
+  height: 5em;
+  font-size: 0.9em;
+  border-radius: 0.5em;
+}
+
+
 .publishCardDetailsBottom {
   background-color: #F6FAFF;
   border: 0.1em solid #A3CAF6;
