--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -87,6 +87,12 @@
 }
 
 .cardUserCP {
+  color: grey;
+  line-height: 0.5em;
+  font-size: 0.8em
+}
+
+.cardLikesCP {
   color: red;
   line-height: 0.5em;
   font-size: 0.8em
