--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -64,14 +64,14 @@
   border: 0.1em solid #A3CAF6;
   border-radius: 1em;
   width: 25em;
-  background-color: #F6FAFF;
+  background-color: #fafafa;
 }
 
 .cardSectionInterior {
-  border: 0.1em solid #A3CAF6;
   border-radius: 1em;
   height: 14em;
-  background: linear-gradient(270deg, rgba(240, 50, 110, 1) 0%, rgba(109, 92, 230, 1) 100%);
+  background: #ebe9e7;
+
 }
 
 .cardUserImage {
