Improve home page

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -61,17 +61,15 @@
 }
 
 .cardExterior {
-  border: 0.1em solid #A3CAF6;
   border-radius: 1em;
   width: 25em;
-  background-color: #fafafa;
+  background-color: #FCFCFC;
 }
 
 .cardSectionInterior {
   border-radius: 1em;
   height: 14em;
   background: #ebe9e7;
-
 }
 
 .cardUserImage {
@@ -105,17 +103,15 @@
 }
 
 .cardProjectExterior {
-  border: 0.1em solid #A3CAF6;
   border-radius: 1em;
   width: 10em;
   background-color: #F6FAFF;
 }
 
 .cardProjectSectionInterior {
-  border: 0.1em solid #A3CAF6;
   border-radius: 1em;
   height: 12em;
-  background: linear-gradient(270deg, rgba(240, 50, 110, 1) 0%, rgba(109, 92, 230, 1) 100%);
+  background: #ebe9e7;
 }
 
 .scrollProjectAreaHorizontal {
