--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -62,14 +62,14 @@
 
 .cardExterior {
   border-radius: 1em;
-  width: 25em;
+
   background-color: #FCFCFC;
 }
 
 .cardSectionInterior {
   border-radius: 1em;
   height: 14em;
-  background: #ebe9e7;
+  background: #393e46;
 }
 
 .cardUserImage {
@@ -156,6 +156,14 @@
   font-size: 0.9em;
   border-radius: 0.5em;
 }
+
+.startAppButton {
+  width: 90vw;
+  height: 4em;
+  font-size: 0.9em;
+  border-radius: 1em;
+}
+
 
 .acceptModerateButton {
   width: 30vw;
