Improved welcome page

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -155,10 +155,10 @@
 }
 
 .startAppButton {
-  width: 90vw;
+  width: 20em;
   height: 4em;
   font-size: 0.9em;
-  border-radius: 1em;
+  border-radius: 0.5em;
 }
 
 
