Profile page improvements

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -99,10 +99,10 @@
 }
 
 .cardProjectExterior {
-  border-radius: 1em;
+  border-radius: 0.4em;
   width: 10em;
   height: 17em;
-  background-color: #F6FAFF;
+  background-color: #F7F7F7;
 }
 
 .cardProjectSectionInterior {
@@ -168,7 +168,7 @@
 
 
 .publishCardDetailsBottom {
-  background-color: #F6FAFF;
+  background-color: #F7F7F7;
   border: 0.1em solid #A3CAF6;
   height: 5em;
   border-bottom-left-radius: 1em;
