--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -45,7 +45,7 @@
 
 .button {
   border-radius: 0.4em;
-  width: 8em;
+  width: 9em;
   height: 3em;
 }
 
@@ -101,7 +101,8 @@
 .cardProjectExterior {
   border-radius: 0.4em;
   width: 10em;
-  height: 17em;
+  line-height: 0.1em;
+  height: 15em;
   background-color: #F7F7F7;
 }
 
