Translation done 90% + minor fixes

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -17,7 +17,7 @@ $secondary: #7540ee;
 $accent: #f0326e;
 $background: #eeecfc;
 $light-background: #f6faff;
-$dark: #1d1d1d;
+$dark: #393e46;
 
 $positive: #21ba45;
 $negative: #c10015;
