Minor interface fixes

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -103,7 +103,7 @@
   width: 10em;
   line-height: 0.1em;
   height: 15em;
-  background-color: #F7F7F7;
+  background-color: #F6FAFF
 }
 
 .cardProjectSectionInterior {
